--- a/views/index.html
+++ b/views/index.html
@@ -21,14 +21,12 @@
   <script src="meta.json" type="application/ld+json"></script>
 
 </head>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Meteo</a>
+        <a class="navbar-brand" href="#">ViewMeteo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -51,13 +49,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/Roma.jpg" class="d-block w-100 carousel-img">
+          <img src="https://source.unsplash.com/7ybKmhDTcz0" class="d-block w-100 carousel-img">
         </div>
         <div class="carousel-item">
-          <img src="img/bari.jpg" class="d-block w-100 carousel-img">
+          <img src="https://source.unsplash.com/VjA_PSSsOHI" class="d-block w-100 carousel-img">
         </div>
         <div class="carousel-item">
-          <img src="img/firenze.jpg" class="d-block w-100 carousel-img">
+          <img src="https://source.unsplash.com/I9MeNSxtoJ8" class="d-block w-100 carousel-img">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -70,16 +68,31 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
-    </div> 
-    <div id="divCities">
-      <div>
-        <h2>Roma</h2>
-        <img src="img/Roma.jpg" class="icon-img">
-        <p id='Roma-temp'></p>
-        <img src="" id="Roma-icon"></div>
+    </div>
+    <div class="container">
+      <div id="divCities">
+        <div class="row">
+          <div class="col-md-4">
+            <h2>Roma</h2>
+            <img src="https://source.unsplash.com/7ybKmhDTcz0" class="icon-img">
+            <p id='Roma-temp'></p>
+            <img src="" id="Roma-icon">
+          </div>
+          <div class="col-md-4">
+            <h2>Torino</h2>
+            <img src="https://source.unsplash.com/VjA_PSSsOHI" class="icon-img">
+            <p id='Torino-temp'></p>
+            <img src="" id="Torino-icon">
+          </div>
+          <div class="col-md-4">
+            <h2>Milano</h2>
+            <img src="https://source.unsplash.com/I9MeNSxtoJ8" class="icon-img">
+            <p id='Milano-temp'></p>
+            <img src="" id="Milano-icon">
+          </div>
+        </div>
       </div>
     </div>
-
 
     <div class="position-fixed py-2 px-3 rounded-pill bg-black text-light" id="divDark">
       <div class="form-check form-switch pull-right">
@@ -88,7 +101,11 @@
       </div>
     </div>
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="js/darkMode.js" type="text/javascript"></script>
+  <script src="js/weather.js" type="text/javascript"></script>
 </body>
-<script src="js/darkMode.js" type="text/javascript"></script>
-<script src="js/weather.js" type="text/javascript"></script>
+
 </html>
