--- a/views/index.html
+++ b/views/index.html
@@ -74,23 +74,33 @@
         <div class="row">
           <div class="col-md-4">
             <h2>Roma</h2>
-            <img src="https://source.unsplash.com/7ybKmhDTcz0" class="icon-img">
-            <p id='Roma-temp'></p>
-            <img src="" id="Roma-icon">
+            <img src="https://source.unsplash.com/7ybKmhDTcz0" class="icon-img rounded-circle">
+            <div class="pIcon">
+              <img src="" id="Roma-icon" class="icon">
+              <p id='Roma-temp' class="temp"></p>
+            </div>
           </div>
           <div class="col-md-4">
             <h2>Torino</h2>
-            <img src="https://source.unsplash.com/VjA_PSSsOHI" class="icon-img">
-            <p id='Torino-temp'></p>
-            <img src="" id="Torino-icon">
+            <img src="https://source.unsplash.com/VjA_PSSsOHI" class="icon-img rounded-circle">
+            <div class="pIcon">
+              <img src="" id="Torino-icon" class="icon">
+              <p id='Torino-temp' class="temp"></p>
+            </div>
           </div>
           <div class="col-md-4">
             <h2>Milano</h2>
-            <img src="https://source.unsplash.com/I9MeNSxtoJ8" class="icon-img">
-            <p id='Milano-temp'></p>
-            <img src="" id="Milano-icon">
+            <img src="https://source.unsplash.com/I9MeNSxtoJ8" class="icon-img rounded-circle">
+            <div class="pIcon">
+              <img src="" id="Milano-icon" class="icon">
+              <p id='Milano-temp' class="temp"></p>
+            </div>
           </div>
         </div>
+      </div>
+      <hr>
+      <div id="currentPos">
+        <h2 id="pos">Posizione corrente:</h2>
       </div>
     </div>
 
