--- a/views/index.html
+++ b/views/index.html
@@ -75,25 +75,31 @@
           <div class="col-md-4">
             <h2>Roma</h2>
             <img src="https://source.unsplash.com/7ybKmhDTcz0" class="icon-img rounded-circle">
-            <div class="pIcon">
-              <img src="" id="Roma-icon" class="icon">
-              <p id='Roma-temp' class="temp"></p>
+            <div>
+              <p>
+                <img id="Roma-icon" class="icon">
+                <span id='Roma-temp' class="temp"></span>
+              </p>
             </div>
           </div>
           <div class="col-md-4">
             <h2>Torino</h2>
             <img src="https://source.unsplash.com/VjA_PSSsOHI" class="icon-img rounded-circle">
-            <div class="pIcon">
-              <img src="" id="Torino-icon" class="icon">
-              <p id='Torino-temp' class="temp"></p>
+            <div>
+              <p>
+                <img id="Torino-icon" class="icon">
+                <span id='Torino-temp' class="temp"></span>
+              </p>
             </div>
           </div>
           <div class="col-md-4">
             <h2>Milano</h2>
             <img src="https://source.unsplash.com/I9MeNSxtoJ8" class="icon-img rounded-circle">
-            <div class="pIcon">
-              <img src="" id="Milano-icon" class="icon">
-              <p id='Milano-temp' class="temp"></p>
+            <div>
+              <p>
+                <img id="Milano-icon" class="icon">
+                <span id='Milano-temp' class="temp"></span>
+              </p>
             </div>
           </div>
         </div>
@@ -101,7 +107,12 @@
       <hr>
       <div id="currentPos">
         <h2 id="pos">Posizione corrente:</h2>
+        <p>
+          <img id="current-icon" class="icon">
+          <span id='current-temp' class="temp"></span>
+        </p>
       </div>
+      <hr>
     </div>
 
     <div class="position-fixed py-2 px-3 rounded-pill bg-black text-light" id="divDark">
