--- a/views/index.html
+++ b/views/index.html
@@ -111,6 +111,56 @@
           <img id="current-icon" class="icon">
           <span id='current-temp' class="temp"></span>
         </p>
+        <div class="row info">
+          <div class="col">
+            <h5>Velocità del vento</h5>
+            <p id="windSpeed"></p>
+          </div>
+          <div class="col">
+            <h5>Umidità</h5>
+            <p id="humidity"></p>
+          </div>
+        </div>
+        <div class="dataweather">
+          <h4>Previsioni dei prossimi giorni</h4>
+          <div class="table">
+            <div class="tempday">
+              <p id="day1"></p>
+              <div class="box">
+                <i class="fas fa-wind"></i>
+                <p>23°C</p>
+              </div>
+            </div>
+            <div class="tempday">
+              <p id="day2"></p>
+              <div class="box">
+                <i class="fas fa-cloud"></i>
+                <p></p>
+              </div>
+            </div>
+            <div class="tempday">
+              <p id="day3"></p>
+              <div class="box">
+                <i class="fas fa-sun"></i>
+                <p></p>
+              </div>
+            </div>
+            <div class="tempday">
+              <p id="day4"></p>
+              <div class="box">
+                <i class="far fa-sun"></i>
+                <p></p>
+              </div>
+            </div>
+            <div class="tempday">
+              <p id="day5"></p>
+              <div class="box">
+                <i class="fas fa-cloud-sun"></i>
+                <p></p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <hr>
     </div>
