--- a/views/index.html
+++ b/views/index.html
@@ -122,47 +122,19 @@
           </div>
         </div>
         <div class="dataweather">
-          <h4>Previsioni dei prossimi giorni</h4>
-          <div class="table">
-            <div class="tempday">
-              <p id="day1"></p>
-              <div class="box">
-                <i class="fas fa-wind"></i>
-                <p>23°C</p>
-              </div>
-            </div>
-            <div class="tempday">
-              <p id="day2"></p>
-              <div class="box">
-                <i class="fas fa-cloud"></i>
-                <p></p>
-              </div>
-            </div>
-            <div class="tempday">
-              <p id="day3"></p>
-              <div class="box">
-                <i class="fas fa-sun"></i>
-                <p></p>
-              </div>
-            </div>
-            <div class="tempday">
-              <p id="day4"></p>
-              <div class="box">
-                <i class="far fa-sun"></i>
-                <p></p>
-              </div>
-            </div>
-            <div class="tempday">
-              <p id="day5"></p>
-              <div class="box">
-                <i class="fas fa-cloud-sun"></i>
-                <p></p>
-              </div>
-            </div>
+          <h4>Previsioni delle prossime ore</h4>
+          <div id="forecast" class="row">
           </div>
         </div>
       </div>
       <hr>
+      <div>
+        <p>cerca città</p>
+      </div>
+      <hr>
+      <div>
+        <p>mappa</p>
+      </div>
     </div>
 
     <div class="position-fixed py-2 px-3 rounded-pill bg-black text-light" id="divDark">
