--- a/views/search.ejs
+++ b/views/search.ejs
@@ -37,8 +37,8 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
           </ul>
-          <form class="d-flex" action="/search" method="post">
-            <input class="form-control me-2" type="search" placeholder="Cerca la città" aria-label="Search" name="search">
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Cerca la città" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Cerca</button>
           </form>
         </div>
@@ -46,65 +46,6 @@
     </nav>
   </header>
   <main>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://source.unsplash.com/7ybKmhDTcz0" class="d-block w-100 carousel-img">
-        </div>
-        <div class="carousel-item">
-          <img src="https://source.unsplash.com/VjA_PSSsOHI" class="d-block w-100 carousel-img">
-        </div>
-        <div class="carousel-item">
-          <img src="https://source.unsplash.com/I9MeNSxtoJ8" class="d-block w-100 carousel-img">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-    <div class="container">
-      <div id="divCities">
-        <div class="row">
-          <div class="col-md-4">
-            <h2>Roma</h2>
-            <img src="https://source.unsplash.com/7ybKmhDTcz0" class="icon-img rounded-circle">
-            <div>
-              <p>
-                <img id="Roma-icon" class="icon">
-                <span id='Roma-temp' class="temp"></span>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <h2>Torino</h2>
-            <img src="https://source.unsplash.com/VjA_PSSsOHI" class="icon-img rounded-circle">
-            <div>
-              <p>
-                <img id="Torino-icon" class="icon">
-                <span id='Torino-temp' class="temp"></span>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <h2>Milano</h2>
-            <img src="https://source.unsplash.com/I9MeNSxtoJ8" class="icon-img rounded-circle">
-            <div>
-              <p>
-                <img id="Milano-icon" class="icon">
-                <span id='Milano-temp' class="temp"></span>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <hr>
       <div id="currentPos">
         <h2 id="pos">Posizione corrente:</h2>
         <p>
@@ -128,14 +69,6 @@
         </div>
       </div>
       <hr>
-      <div>
-        <p>cerca città</p>
-      </div>
-      <hr>
-      <div>
-        <p>mappa</p>
-      </div>
-    </div>
 
     <div class="position-fixed py-2 px-3 rounded-pill bg-black text-light" id="divDark">
       <div class="form-check form-switch pull-right">
@@ -148,7 +81,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="js/darkMode.js" type="text/javascript"></script>
-  <script src="js/weather.js" type="text/javascript"></script>
+  
 </body>
 
 </html>
