--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -26,7 +25,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">ViewMeteo</a>
+        <a class="navbar-brand" href="/">ViewMeteo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -36,8 +35,11 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Mappa</a>
+            </li>
           </ul>
-          <form class="d-flex" action="/search" method="post">
+          <form name="Form" class="d-flex" action="/search" onsubmit="return check()" method="post">
             <input class="form-control me-2" type="search" placeholder="Cerca la città" aria-label="Search" name="search">
             <button class="btn btn-outline-success" type="submit">Cerca</button>
           </form>
@@ -129,10 +131,6 @@
       </div>
       <hr>
       <div>
-        <p>cerca città</p>
-      </div>
-      <hr>
-      <div>
         <p>mappa</p>
       </div>
     </div>
@@ -149,6 +147,7 @@
     crossorigin="anonymous"></script>
   <script src="js/darkMode.js" type="text/javascript"></script>
   <script src="js/weather.js" type="text/javascript"></script>
+  <script src="js/index.js" type="text/javascript"></script>
 </body>
 
 </html>
