--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,4 +1,11 @@
-<!DOCTYPE html>
+<% if(error){
+  %>
+  <script>
+    window.location.replace("/");
+  </script>  
+<% }else{ %>
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,7 +33,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">ViewMeteo</a>
+        <a class="navbar-brand" href="/">ViewMeteo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,8 +44,8 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Cerca la città" aria-label="Search">
+          <form name ="Form" class="d-flex" action="/search" onsubmit="return check()" method="post">
+            <input class="form-control me-2" type="search" placeholder="Cerca la città" aria-label="Search" name="search">
             <button class="btn btn-outline-success" type="submit">Cerca</button>
           </form>
         </div>
@@ -46,30 +53,28 @@
     </nav>
   </header>
   <main>
-      <div id="currentPos">
-        <h2 id="pos">Posizione corrente:</h2>
+      <div id="searchedCity">
+        <h1 id="searched"><%= weather.name %></h2>
         <p>
-          <img id="current-icon" class="icon">
-          <span id='current-temp' class="temp"></span>
+          <img id="search-icon" src="http://openweathermap.org/img/wn/<%= weather.weather[0].icon %>.png">
+          <span id='search-temp'><%= weather.main.temp %>°C</span>
         </p>
-        <div class="row info">
+        <div class="row info" id="sInfo">
           <div class="col">
             <h5>Velocità del vento</h5>
-            <p id="windSpeed"></p>
+            <p id="windSpeed"><%= weather.wind.speed %> km/h</p>
           </div>
           <div class="col">
             <h5>Umidità</h5>
-            <p id="humidity"></p>
+            <p id="humidity"><%= weather.main.humidity %>%</p>
           </div>
         </div>
-        <div class="dataweather">
+        <div class="dataweather" id="sForecast">
           <h4>Previsioni delle prossime ore</h4>
           <div id="forecast" class="row">
           </div>
         </div>
       </div>
-      <hr>
-
     <div class="position-fixed py-2 px-3 rounded-pill bg-black text-light" id="divDark">
       <div class="form-check form-switch pull-right">
         <input class="form-check-input" type="checkbox" id="darkMode" onclick="mode()">
@@ -81,7 +86,14 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="js/darkMode.js" type="text/javascript"></script>
-  
+  <script> 
+    var lat= '<%= weather.coord.lat %>';
+    var lon= '<%= weather.coord.lon %>';
+  </script>
+  <script src="js/search.js" type="text/javascript"></script>
+  <script src="js/weather.js" type="text/javascript"></script>
 </body>
 
 </html>
+
+<% } %>
