--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Mappa</a>
+              <a class="nav-link active" aria-current="page" href="/map">Mappa</a>
             </li>
           </ul>
           <form name="Form" class="d-flex" action="/search" onsubmit="return check()" method="post">
