--- a/views/map.html
+++ b/views/map.html
@@ -1,11 +1,3 @@
-<% if(error){
-  %>
-  <script>
-    window.location.replace("/");
-  </script>  
-<% }else{ %>
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meteo</title>
+
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+    integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+    crossorigin="" />
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -47,7 +44,7 @@
               <a class="nav-link active" aria-current="page" href="/map">Mappa</a>
             </li>
           </ul>
-          <form name ="Form" class="d-flex" action="/search" onsubmit="return check()" method="post">
+          <form name="Form" class="d-flex" action="/search" onsubmit="return check()" method="post">
             <input class="form-control me-2" type="search" placeholder="Cerca la città" aria-label="Search" name="search">
             <button class="btn btn-outline-success" type="submit">Cerca</button>
           </form>
@@ -56,28 +53,18 @@
     </nav>
   </header>
   <main>
-      <div id="searchedCity">
-        <h1 id="searched"><%= weather.name %></h2>
-        <p>
-          <img id="search-icon" src="http://openweathermap.org/img/wn/<%= weather.weather[0].icon %>.png">
-          <span id='search-temp'><%= weather.main.temp %>°C</span>
-        </p>
-        <div class="row info" id="sInfo">
-          <div class="col">
-            <h5>Velocità del vento</h5>
-            <p id="windSpeed"><%= weather.wind.speed %> km/h</p>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+              <div id="map"></div>
+            </div>
+            <div class="col">
+              <div class="weatherSelected">
+              </div>
+            </div>
           </div>
-          <div class="col">
-            <h5>Umidità</h5>
-            <p id="humidity"><%= weather.main.humidity %>%</p>
-          </div>
-        </div>
-        <div class="dataweather" id="sForecast">
-          <h4>Previsioni delle prossime ore</h4>
-          <div id="forecast" class="row">
-          </div>
-        </div>
-      </div>
+    </div>
+
     <div class="position-fixed py-2 px-3 rounded-pill bg-black text-light" id="divDark">
       <div class="form-check form-switch pull-right">
         <input class="form-check-input" type="checkbox" id="darkMode" onclick="mode()">
@@ -89,14 +76,13 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="js/darkMode.js" type="text/javascript"></script>
-  <script> 
-    var lat= '<%= weather.coord.lat %>';
-    var lon= '<%= weather.coord.lon %>';
-  </script>
-  <script src="js/search.js" type="text/javascript"></script>
+  <script src="js/map.js" type="text/javascript"></script>
   <script src="js/weather.js" type="text/javascript"></script>
+  
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+    crossorigin=""></script>
 </body>
 
 </html>
-
-<% } %>
