--- a/views/map.html
+++ b/views/map.html
@@ -45,7 +45,8 @@
             </li>
           </ul>
           <form name="Form" class="d-flex" action="/search" onsubmit="return check()" method="post">
-            <input class="form-control me-2" type="search" placeholder="Cerca la città" aria-label="Search" name="search">
+            <input class="form-control me-2" type="search" placeholder="Cerca la città" aria-label="Search"
+              name="search">
             <button class="btn btn-outline-success" type="submit">Cerca</button>
           </form>
         </div>
@@ -54,15 +55,30 @@
   </header>
   <main>
     <div class="container">
-        <div class="row">
-            <div class="col">
-              <div id="map"></div>
-            </div>
-            <div class="col">
-              <div class="weatherSelected">
+      <div class="row">
+        <div class="col-md-7">
+          <div id="map"></div>
+        </div>
+        <div class="col-md-5">
+          <div class="weatherSelected">
+            <h1 id="selected"></h1>
+              <p>
+                <img id="selected-icon" class="icon">
+                <span id='selected-temp' class="temp"></span>
+              </p>
+            <div class="row selectInfo">
+              <div class="col">
+                <h5>Velocità del vento</h5>
+                <p id="sWindSpeed"></p>
+              </div>
+              <div class="col">
+                <h5>Umidità</h5>
+                <p id="sHumidity"></p>
               </div>
             </div>
           </div>
+        </div>
+      </div>
     </div>
 
     <div class="position-fixed py-2 px-3 rounded-pill bg-black text-light" id="divDark">
@@ -78,7 +94,7 @@
   <script src="js/darkMode.js" type="text/javascript"></script>
   <script src="js/map.js" type="text/javascript"></script>
   <script src="js/weather.js" type="text/javascript"></script>
-  
+
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
     integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
